bangalore changed to Bengaluru

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <meta name="theme-color" content="#0066CC" />
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Curadent - Advanced Dental Care in Bangalore. Expert dental services including general dentistry, cosmetic dentistry, orthodontics, and dental implants." />
-    <title>Curadent - Advanced Dental Care in Bangalore</title>
+    <meta name="description" content="Curadent - Advanced Dental Care in Bengaluru. Expert dental services including general dentistry, cosmetic dentistry, orthodontics, and dental implants." />
+    <title>Curadent - Advanced Dental Care in Bengaluru</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
